--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -11,6 +11,7 @@ version = '2.0.0'
 
 [[bin]]
 name = 'node-template'
+path = 'src/lib.rs'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
@@ -19,11 +20,16 @@ targets = ['x86_64-unknown-linux-gnu']
 substrate-build-script-utils = '2.0.0'
 
 [dependencies]
-jsonrpc-core = '15.0.0'
+jsonrpc-core = '15.0'
+jsonrpc-core-client = '15.0'
+jsonrpc-derive = '15.0'
 structopt = '0.3.8'
 
 # local dependencies
 node-template-runtime = { path = '../runtime', version = '2.0.0' }
+pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.0' }
+pallet-template-runtime-api = { path = '../pallets/template/runtime-api', default-features = false, version = '2.0.0' }
+pallet-template-rpc = { path = '../pallets/template/rpc', default-features = false, version = '2.0.0' }
 
 # Substrate dependencies
 frame-benchmarking = '2.0.0'
