--- a/pallets/template/Cargo.toml
+++ b/pallets/template/Cargo.toml
@@ -21,6 +21,9 @@ version = '1.3.4'
 [dependencies]
 frame-support = { default-features = false, version = '2.0.0' }
 frame-system = { default-features = false, version = '2.0.0' }
+sp-std = { default-features = false, version = '2.0.0' }
+sp-runtime = { default-features = false, version = '2.0.0' }
+balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
 
 [dev-dependencies]
 sp-core = { default-features = false, version = '2.0.0' }
@@ -30,7 +33,10 @@ sp-runtime = { default-features = false, version = '2.0.0' }
 [features]
 default = ['std']
 std = [
+    'balances/std',
     'codec/std',
     'frame-support/std',
     'frame-system/std',
+    'sp-std/std',
+    'sp-runtime/default'
 ]
